    weak automata as input, but the documentation did not reflect
    this.

  - spot::remove_alternation() has a new argument to decide whether it
    should raise an exception of return nullptr if it requires more
    acceptance sets than supported.

  - spot::dualize() learned a trick to be faster on states that have
    less outgoing edges than atomic proposition declared on the
    automaton.  (Issue #566.)

  - [Potential backward incompatibility] spot::dualize() does not call
    cleanup_acceptance() anymore.  This change ensures that the dual
    of a Büchi automaton will always be a co-Büchi automaton.
    Previously cleanup_acceptance(), which remove unused colors from
    the acceptance, was sometimes able to simplify co-Büchi to "t",
    causing surprizes.

  Python:

  - The spot.automata() and spot.automaton() functions now accept a
    drop_false_edges=False argument to disable the historical behavior
    of ignoring edges labeled by False.

  - Calling aut.highlight_state(s, None) or aut.highlight_edge(e,
    None) may now be used to remove the highlighting color of some
    given state or edge.  Use aut.remove_highlight_states() or
    aut.remove_highlight_edges() to remove all colors. (Issue #554.)

  - Calling aut.get_hight_state(s) or get.highlight_edge(e) will
    return the highlight color of that state/edge or None.

  - Recent version Jupyter Notebook and Jupyter Lab started to render
    SVG elements using <img...> tag to make it easier to copy/paste
    those image.  This breaks several usages, including the
    possibility to have informative tooltips on states and edges (used
    in Spot).  See the following issues for more details.
      https://github.com/jupyter/notebook/issues/7114
      https://github.com/jupyterlab/jupyterlab/issues/10464

    This version of Spot now declares its svg outputs as HTML to
    prevent Jypyter from wrapping them is images.

  Bugs fixed:

  - tgba_determinize()'s use_simulation option would cause it to